--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.4"
+  },
+  "dependencies": {
+    "angular-chart.js": "^1.1.1"
   }
 }
