--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,12 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "angular-route": "^1.6.1",
+    "angular": "^1.6.1",
+    "jquery": "^3.1.1",
+    "angular-chart": "^0.5.0"
+  }
 }
